generated/checkers/refine/KN-Memory-Leak-c8dafb0e-2/build_logs/syntax-repair-refine-0-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::evalAssume(clang::ento::ProgramStateRef, clang::ento::SVal, bool) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:52: error: ‘const class clang::ento::ProgramState’ has no member named ‘getContext’; did you mean ‘get_context’?
  155 |           const StackFrameContext *CurSFC = State->getContext<StackFrameContext>();
      |                                                    ^~~~~~~~~~
      |                                                    get_context
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:80: error: expected primary-expression before ‘>’ token
  155 |           const StackFrameContext *CurSFC = State->getContext<StackFrameContext>();
      |                                                                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:82: error: expected primary-expression before ‘)’ token
  155 |           const StackFrameContext *CurSFC = State->getContext<StackFrameContext>();
      |                                                                                  ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:36: warning: unused variable ‘CurSFC’ [-Wunused-variable]
  155 |           const StackFrameContext *CurSFC = State->getContext<StackFrameContext>();
      |                                    ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:54:13: warning: ‘bool {anonymous}::belongsToFrame(const clang::ento::MemRegion*, const clang::StackFrameContext*)’ defined but not used [-Wunused-function]
   54 | static bool belongsToFrame(const MemRegion *MR, const StackFrameContext *SFC) {
      |             ^~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
